--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.18/c3.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap-table/4.2.0/react-bootstrap-table-all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css"
+    />
 
-<head>
-    <meta charset="UTF-8">
     <title>Codeforces Problems</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="root"></div>
     <script src="./dist/bundle.js"></script>
-</body>
-
+  </body>
 </html>
